# application_template_c

./: CMakeLists.txt  imgui.ini  setup.py
scripts/linux/: IDE_setup.py
src/: application.c  application.h  main.c
src/dashboard/: dashboard.c  dashboard.h
src/imgui_config/: imgui_config.c  imgui_config.h
src/platform/: window.c  window.h
src/render/: renderer.c  renderer.h
src/util/: core_config.h  crash_handler.c  crash_handler.h  system.c  system.h  util.c  util.h
src/util/UI/: pannel_collection.c
src/util/data_structure/: darray.h  data_types.h  dynamic_string.c  dynamic_string.h  unordered_map.c  unordered_map.h
src/util/io/: logger.c  logger.h  serializer_yaml.c  serializer_yaml.h
